--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "shane",
+  "name": "holeczpeter",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "serve": "set NODE_OPTIONS=--openssl-legacy-provider &&  vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider &&  vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
