--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "set NODE_OPTIONS=--openssl-legacy-provider &&  vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "engines": {
+    "node": "16.18.1"
+  },
   "dependencies": {
     "@mlqt/vue-back-top": "^1.0.8",
     "@vue/compiler-sfc": "^3.3.4",
