--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-router": "^3.5.1",
     "vue-scroll-reveal": "^1.0.11",
     "vue-scrollactive": "^0.9.3",
+    "vue-toast-notification": "^1.0.1",
     "vuejs-scroll-fixed-header": "^1.0.3"
   },
   "devDependencies": {
