--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,5 @@ jobs:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: /domains/holeczpeter.com
+        local-dir: /domains/holeczpeter.com/
         server-dir: /public_html/  # Az FTP-szerveren a célmappa
